hphp/test/zend/good/bug38942.php
<?php
class foo {
    public function foo() {}
}

class bar extends foo {
}
print_r(get_class_methods("bar"));
?>